force-app/main/default/objects/CA10__CaNessusVulnerability__c/fields/cloudAccount__c.field-meta.xml
<CustomField>
    <fullName>cloudAccount__c</fullName>
    <formula>IF( 
   NOT(ISBLANK( CA10V__vCenterVirtualMachineBreezeAgentId__c)),  CA10V__vCenterVirtualMachine__r.CA10V__managementServer__r.Name,
  IF(
    NOT(ISBLANK( CA10__instanceId__c)),  CA10__instance__r.CA10__account__r.Name,
null
    )
  )</formula>
    <label>Cloud Account</label>
    <type>Text</type>
</CustomField>