force-app/main/default/objects/CA10__CaNessusVulnerability__c/fields/cloudAccountId__c.field-meta.xml
<CustomField>
    <fullName>cloudAccountId__c</fullName>
    <formula>IF(
NOT(ISBLANK( CA10V__vCenterVirtualMachineBreezeAgentId__c)),  CA10V__vCenterVirtualMachine__r.CA10V__managementServer__r.CA10V__serviceInstanceUuid__c ,
IF(
NOT(ISBLANK( CA10__instanceId__c)),  CA10__instance__r.CA10__account__r.CA10__accountId__c ,
null
)
)</formula>
    <label>Cloud Account ID</label>
    <type>Text</type>
</CustomField>