force-app/main/default/objects/CA10__CaNessusVulnerability__c/fields/hostId__c.field-meta.xml
<CustomField>
    <fullName>hostId__c</fullName>
    <formula>IF(
  NOT(ISBLANK( CA10__instanceId__c)),  CA10__instance__r.CA10__instanceId__c,
  IF(
    NOT(ISBLANK( CA10V__vCenterVirtualMachineBreezeAgentId__c)),  CA10V__vCenterVirtualMachine__r.CA10V__virtualMachineId__c,
null
  )
)</formula>
    <label>Host ID</label>
    <type>Text</type>
</CustomField>