force-app/main/default/objects/CA10__CaNessusVulnerability__c/fields/hostName__c.field-meta.xml
<CustomField>
    <fullName>hostName__c</fullName>
    <formula>IF(
  NOT(ISBLANK( CA10__instanceId__c)),  CA10__instance__r.Name,
  IF(
    NOT(ISBLANK( CA10V__vCenterVirtualMachineBreezeAgentId__c)),  CA10V__vCenterVirtualMachine__r.CA10V__name__c,
null
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Name</label>
    <type>Text</type>
</CustomField>