force-app/main/default/objects/CA10__CaNessusVulnerability__c/fields/provider__c.field-meta.xml
<CustomField>
    <fullName>provider__c</fullName>
    <formula>IF(
  NOT(ISBLANK(CA10__instanceId__c)), &quot;AWS&quot;,
  IF(
    NOT(ISBLANK(CA10__virtualMachineId__c)), &quot;Azure&quot;,
    IF(
      NOT(ISBLANK(CA10__azureVmScaleSetInstanceId__c)), &quot;Azure&quot;,  
      IF(
        NOT(ISBLANK(CA10__googleGceInstanceUniqueId__c )), &quot;GCP&quot;,
        IF(
          NOT(ISBLANK(CA10__physicalServerId__c )), &quot;Physical Infrastructure&quot;,
          IF(
            NOT(ISBLANK(CA10V__vCenterVirtualMachineBreezeAgentId__c )), &quot;vCenter&quot;,
null
            )
          )
        )
      )
    )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider</label>
    <type>Text</type>
</CustomField>